add view and urls for Organisation and CustomUser (get, update) add tests for get and post method in CustomUserViewSet, OrganisationSettingsUpdate update models fields in account app

--- a/templates/home.html
+++ b/templates/home.html
@@ -30,7 +30,7 @@
             <div class="inline-group text-center w-50">
                 <a class="btn btn-danger" href="">Арендодатель</a>
                 <a  class="btn btn-primary" href="">Арендатор</a>
-                <a  class="btn btn-danger" href="/profile/83a19843-2f26-48d0-9289-a5343f958885/">Тест-кабинета</a>
+                <a  class="btn btn-danger" href="/profile/{{ user_id }}/">Тест-кабинета</a>
             </div>
         </div>
     </div>
